tests/files/type_checker_tests/should_fail/181.cmdr
//Should fail calling something with incorrect parameters
fn add(a: int, b: int): int {
    return a + b;
}
println add(3.0, "true");
